# legged_control_mujoco

./: .gitignore  README.md
docker/: Dockerfile  README.md
legged_common/scripts/: generate_urdf.sh
legged_controllers/config/a1/: task.info
legged_controllers/src/: LeggedController.cpp
legged_mujoco/: CMakeLists.txt  TROUBLESHOOTING.md  legged_mujoco_plugins.xml  package.xml
legged_mujoco/config/: mujoco_params.yaml
legged_mujoco/include/legged_mujoco/: LeggedHWMujoco.h
legged_mujoco/launch/: mujoco_sim.launch
legged_mujoco/models/unitree_a1/: a1.xml  modify_a1.py
legged_mujoco/scripts/: mujoco_viewer.py
legged_mujoco/src/: LeggedHWMujoco.cpp  fix_joint_mapping.py  loadmodel_fix.cpp  mujoco_hw_node.cpp
