<?xml version="1.0"?>
<package format="2">
  <name>legged_mujoco</name>
  <version>0.1.0</version>
  <description>MuJoCo simulation interface for legged robots</description>
  
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>legged_hw</depend>
  <depend>legged_common</depend>
  
  <export>
    <hardware_interface plugin="${prefix}/legged_mujoco_plugins.xml"/>
  </export>
</package>
